[gd_scene load_steps=5 format=3 uid="uid://b63okl0hujexs"]

[ext_resource type="Script" path="res://LevelSelectScreen/LevelSelectScreen.gd" id="1_ax7lg"]
[ext_resource type="Texture2D" uid="uid://dc0vstjs5rhwt" path="res://_assets/LevelSelectScreen/background.jpg" id="2_dp6e7"]
[ext_resource type="FontFile" uid="uid://2wv2clpoapco" path="res://_assets/Font/Fredoka-Bold.ttf" id="2_uqx0h"]
[ext_resource type="PackedScene" uid="uid://b76n2x3yrgbtt" path="res://UIButton/UIButton.tscn" id="3_n7tln"]

[node name="LevelSelectScreen" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ax7lg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
scale = Vector2(0.34, 0.34)
texture = ExtResource("2_dp6e7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="LevelContainer" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LevelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="MarginContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_uqx0h")
theme_override_font_sizes/font_size = 64
text = "Select Level"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="MarginContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="BackButton" parent="MarginContainer/LevelContainer/VBoxContainer" instance=ExtResource("3_n7tln")]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="button_pressed" from="MarginContainer/LevelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
